# SimpleDSL

./: .clang-format  .gitignore  CMakeLists.txt
dsllib/: CMakeLists.txt
dsllib/src/: exceptions.h  for_each_on_tuple.h  interpreter.h  trim.h
tests/: CMakeLists.txt
tests/src/: interpreter_test_1.cpp  trim_test.cpp
